Rewrite query builder to support optional query chains of any depth