@@ -39,6 +39,7 @@ public class TestSharesPropertyVariables {
         ContextQueryUpdater cq = new ContextQueryUpdater(ContextQueryUpdater.ListEndpoint, cc, nv, sns, aq);
         cq.updateQueryAndConstructView(aq.deferredFilters);
         String q = aq.assembleSelectQuery(PrefixMapping.Factory.create());
+        System.out.println(q);
         int count = aq.countVarsAllocated();
         if (count != 1) {
             fail("expected to allocate only one variable, but generated query was:\n" + q + "\nwith " + count + " variables.");
@@ -66,21 +67,17 @@ public class TestSharesPropertyVariables {
         //		OPTIONAL { ?___0 <eh:/p2> ?___1 . }
         //		}  ORDER BY  ?___0  ?___1  ?item OFFSET 0 LIMIT 10
 
+        System.out.println(q);
         List<String> opts = new ArrayList<String>();
         List<String> lines = Arrays.asList(q.split("\n"));
         for (String line : lines)
             if (line.startsWith("OPTIONAL"))
                 opts.add(line);
-        assertEquals(2, opts.size());
+        assertEquals(1, opts.size());
 
-        String A = opts.get(0), B = opts.get(1);
-        String opt0 = "OPTIONAL { ?item <eh:/p1> ?___0 . }";
-        String opt1 = "OPTIONAL { ?___0 <eh:/p2> ?___1 . }";
-        if (A.equals(opt0) && B.equals(opt1)) return;
-        if (A.equals(opt1) && B.equals(opt0)) return;
-
-        fail("generated query does not reuse ?___0");
-
+        String actual = opts.getFirst();
+        String expected = "OPTIONAL { ?item <eh:/p1> ?___0 . OPTIONAL { ?___0 <eh:/p2> ?___1 .  }  } ";
+        assertEquals("generated query does not construct optional graph tree.", expected, actual);
     }
 
 }
